[Sevrak changs added to UI]

--- a/HomePage.html
+++ b/HomePage.html
@@ -52,7 +52,7 @@
     .btnColors {
         background-color: #006DA0 !important;
         color: #ECEDEF !important;
-        width: 70px;
+        width: auto;
         height: 30px
     }
 
