--- a/addPoll.html
+++ b/addPoll.html
@@ -39,7 +39,7 @@
         .btnColors {
             background-color: #006DA0 !important;
             color: #ECEDEF !important;
-            width: 70px;
+            width: auto;
             height: 30px
         }
 
@@ -266,7 +266,7 @@
                             <input type="date" required autofocus value="" name="timeout"
                                    class="form-control w3-margin pictureInput"
                                    id="addDiscount-form-timeout-inp" accept="application/txt">
-                            <label> مهلت </label>
+                            <label class="pictureInput"> مهلت </label>
                         </div>
                     </div>
                     <div class="form-group">
