--- a/showPoll.html
+++ b/showPoll.html
@@ -41,7 +41,7 @@
         .btnColors {
             background-color: #006DA0 !important;
             color: #ECEDEF !important;
-            width: 70px;
+            width: auto;
             height: 30px
         }
 
@@ -195,7 +195,7 @@
                     <div class="col-container">
 
                         <div style="direction:rtl !important ;" class="col ">
-                            <h6 class="componentColor w3-center" style="padding-bottom:15px ; padding-top:15px ;padding-right:6px"><b>  نظرسنجی ها  </b></h6>
+                            <h6 class="componentColor w3-center" style="padding-bottom:15px ; padding-top:15px ;padding-right:6px;font-family: 'Baloo Bhai', cursive;"><b>  نظرسنجی ها  </b></h6>
                             <hr />
                             <div class="w3-border-black">
                                 <div class="w3-center"> @questoin </div>
