--- a/salePage.html
+++ b/salePage.html
@@ -39,7 +39,7 @@
         .btnColors {
             background-color: #006DA0 !important;
             color: #ECEDEF !important;
-            width:70px;
+            width:auto!important;
             height:30px
         }
 
