--- a/addPoll.html
+++ b/addPoll.html
@@ -161,7 +161,7 @@
             </div>
             <br/>
             <div class="rightMenuColor">
-                <a href="#" class="rightMenuColor"><span class="glyphicon glyphicon-off"
+                <a href="#" class="rightMenuColor" id="logout"><span class="glyphicon glyphicon-off"
                                                          style="color:#7B8084"></span>&nbsp;&nbsp; خروج از پنل
                 </a>
             </div>
@@ -316,6 +316,38 @@
                         }
                     });
                 }).change();
+
+                /*
+                             Request for logout
+                             send authorization in header
+                             */
+                $("#logout").click(function () {
+
+                    $.get("address.txt", function (data) {
+                        const my_address = data + "/salesman/logout/";
+                        $.ajax({
+                            type: 'POST',
+                            dataType: 'json',
+                            contentType: 'application/json',
+                            url: my_address,
+                            headers:{
+                                'Authorization' : window.sessionStorage.token
+                            },
+                            data: JSON.stringify({}),
+                            success: function (resultData, status, xhr) {
+                                alert(resultData.message);
+                                if (resultData.result.toString() === "true") {
+                                    window.location.href="HomePage.html";
+                                }
+                            },
+                            error: function () {
+                                alert(" اتصال به اینترنت برقرار نیست. ");
+                            }
+                        })
+
+                    });
+                });
+
             });
        
 
