--- a/showProfile.html
+++ b/showProfile.html
@@ -146,7 +146,7 @@
                 <a href="support.html" class="rightMenuColor"><span class="glyphicon glyphicon-earphone" style="color:#7B8084"></span>&nbsp;&nbsp; پشنیبانی </a>
             </div><br />
             <div class="rightMenuColor">
-                <a href="HomePage.html" class="rightMenuColor"><span class="glyphicon glyphicon-off" style="color:#7B8084"></span>&nbsp;&nbsp; خروج از پنل </a>
+                <a href="HomePage.html" class="rightMenuColor" id="logout"><span class="glyphicon glyphicon-off" style="color:#7B8084"></span>&nbsp;&nbsp; خروج از پنل </a>
             </div><br />
         </div>
     </nav>
@@ -409,6 +409,38 @@
 
                     });
                });
+
+            /*
+             Request for logout
+             send authorization in header
+             */
+            $("#logout").click(function () {
+
+                $.get("address.txt", function (data) {
+                    const my_address = data + "/salesman/logout/";
+                    $.ajax({
+                        type: 'POST',
+                        dataType: 'json',
+                        contentType: 'application/json',
+                        url: my_address,
+                        headers:{
+                            'Authorization' : window.sessionStorage.token
+                        },
+                        data: JSON.stringify({}),
+                        success: function (resultData, status, xhr) {
+                            alert(resultData.message);
+                            if (resultData.result.toString() === "true") {
+                                window.location.href="HomePage.html";
+                            }
+                        },
+                        error: function () {
+                            alert(" اتصال به اینترنت برقرار نیست. ");
+                        }
+                    })
+
+                });
+            });
+
 
         });
 
