--- a/addShop.html
+++ b/addShop.html
@@ -162,7 +162,7 @@
             </div>
             <br/>
             <div class="rightMenuColor">
-                <a href="#" class="rightMenuColor"><span class="glyphicon glyphicon-off"
+                <a href="#" class="rightMenuColor" id="logout"><span class="glyphicon glyphicon-off"
                                                          style="color:#7B8084"></span>&nbsp;&nbsp; خروج از پنل
                 </a>
             </div>
@@ -445,7 +445,41 @@
                     });
                 // } else
                 //     alert("طول نام کاربری و رمزعبور باید حداقل 5 کاراکتر باشد.");
+
             });
+
+
+            /*
+             Request for logout
+             send authorization in header
+             */
+            $("#logout").click(function () {
+
+                $.get("address.txt", function (data) {
+                    const my_address = data + "/salesman/logout/";
+                    $.ajax({
+                        type: 'POST',
+                        dataType: 'json',
+                        contentType: 'application/json',
+                        url: my_address,
+                        headers:{
+                            'Authorization' : window.sessionStorage.token
+                        },
+                        data: JSON.stringify({}),
+                        success: function (resultData, status, xhr) {
+                            alert(resultData.message);
+                            if (resultData.result.toString() === "true") {
+                                window.location.href="HomePage.html";
+                            }
+                        },
+                        error: function () {
+                            alert(" اتصال به اینترنت برقرار نیست. ");
+                        }
+                    })
+
+                });
+            });
+
 
         });
 
