--- a/showDiscount.html
+++ b/showDiscount.html
@@ -126,7 +126,7 @@
             </div>
             <br/>
             <div class="rightMenuColor">
-                <a href="#" class="rightMenuColor"><span class="glyphicon glyphicon-off"
+                <a href="#" class="rightMenuColor" id="logout"><span class="glyphicon glyphicon-off"
                                                          style="color:#7B8084"></span>&nbsp;&nbsp; خروج از پنل
                 </a>
             </div>
@@ -209,5 +209,45 @@
             }
         }
     </script>
+
+
+
+    <script>
+
+        $(document).ready(function () {
+
+            $("#logout").click(function () {
+
+                $.get("address.txt", function (data) {
+                    const my_address = data + "/salesman/logout/";
+                    $.ajax({
+                        type: 'POST',
+                        dataType: 'json',
+                        contentType: 'application/json',
+                        url: my_address,
+                        headers:{
+                            'Authorization' : window.sessionStorage.token
+                        },
+                        data: JSON.stringify({}),
+                        success: function (resultData, status, xhr) {
+                            alert(resultData.message);
+                            if (resultData.result.toString() === "true") {
+                                window.location.href="HomePage.html";
+                            }
+                        },
+                        error: function () {
+                            alert(" اتصال به اینترنت برقرار نیست. ");
+                        }
+                    })
+
+                });
+            });
+
+        });
+
+
+    </script>
+
+
 </body>
 </html>
