--- a/showPoll.html
+++ b/showPoll.html
@@ -190,13 +190,11 @@
     <br />
     <div class="container">
         <div class="col-lg-offset-2">
-            <div class="w3-border w3-border-light-gray w3-card-12 w3-padding ">
+            <div class=" w3-padding ">
                 <div class="form-horizontal">
+                    <h6 class=" w3-center" style="padding-bottom:15px ; padding-top:15px ;color:#181B20;padding-right:6px;"><b>  نظرسنجی ها  </b></h6>
                     <div class="col-container">
-
-                        <div style="direction:rtl !important ;" class="col ">
-                            <h6 class="componentColor w3-center" style="padding-bottom:15px ; padding-top:15px ;padding-right:6px;font-family: 'Baloo Bhai', cursive;"><b>  نظرسنجی ها  </b></h6>
-                            <hr />
+                        <div style="direction:rtl !important ;" class="col w3-card-12">
                             <div class="w3-border-black">
                                 <div class="w3-center"> @questoin </div>
                                 <br />
@@ -204,20 +202,74 @@
                                     این نظر سنجی از نوع @polltype
                                     <br />
                                 </div>
-                                <div id="multiChoice">
-                                    <!-- b tedade gozine ha -->
-                                    <div> @choiceBdy</div>
-                                    <br />
-                                    <div> @choiceBdy</div>
-                                    <br />
+                                <div class="col-container">
+                                    <div class="col">
+                                        <div id="multiChoice">
+                                            <!-- b tedade gozine ha -->
+                                            <div> @choiceBdy</div>
+                                            <br />
+                                            <div> @choiceBdy</div>
+                                            <br />
+                                        </div>
+                                    </div>
+                                    <div class="col">
+                                        <div class="form-group">
+                                            <div class="col-md-offset-7 col-md-11">
+                                                <input type="submit" value="نمایش نمودار دایره ای" class="btn btn-default btnColors" id="editProfile-form-submit-btn" />
+                                            </div>
+                                        </div>
+                                        <div class="form-group">
+                                            <div class="col-md-offset-7 col-md-11">
+                                                <input type="submit" value=" نمایش نمودار میله ای" class="btn btn-default btnColors" id="editProfile-form-submit-btn" />
+                                            </div>
+                                        </div>
+                                    </div>
                                 </div>
+
                             </div>
                         </div>
                     </div>
+                    <br />
+                    <div class="col-container">
+                        <div style="direction:rtl !important ;" class="col w3-card-12">
+                            <div class="w3-border-black">
+                                <div class="w3-center"> @questoin </div>
+                                <br />
+                                <div>
+                                    این نظر سنجی از نوع @polltype
+                                    <br />
+                                </div>
+                                <div class="col-container">
+                                    <div class="col">
+                                        <div id="multiChoice">
+                                            <!-- b tedade gozine ha -->
+                                            <div> @choiceBdy</div>
+                                            <br />
+                                            <div> @choiceBdy</div>
+                                            <br />
+                                        </div>
+                                    </div>
+                                    <div class="col">
+                                        <div class="form-group">
+                                            <div class="col-md-offset-7 col-md-11">
+                                                <input type="submit" value="نمایش نمودار دایره ای" class="btn btn-default btnColors" id="editProfile-form-submit-btn" />
+                                            </div>
+                                        </div>
+                                        <div class="form-group">
+                                            <div class="col-md-offset-7 col-md-11">
+                                                <input type="submit" value=" نمایش نمودار میله ای" class="btn btn-default btnColors" id="editProfile-form-submit-btn" />
+                                            </div>
+                                        </div>
+                                    </div>
+                                </div>
 
+                            </div>
+                        </div>
+                    </div>
+                    <hr />
                     <div class="form-group">
                         <div class="col-md-offset-1 col-md-11">
-                            <input type="submit" value="اضافه کردن تخفیف" class="btn btn-default btnColors" id="editProfile-form-submit-btn" />
+                            <input type="submit" value="اضافه کردن نظرسنجی" class="btn btn-default btnColors" id="editProfile-form-submit-btn" />
                         </div>
                     </div>
                 </div>
